@@ -17,6 +17,9 @@
 
 package org.apache.solr.cloud;
 
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
@@ -26,12 +29,14 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
+import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.util.TimeSource;
 import org.apache.solr.util.TimeOut;
 import org.junit.BeforeClass;
@@ -48,6 +53,8 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
         .addConfig(
             "conf1", TEST_PATH().resolve("configsets").resolve("cloud-minimal").resolve("conf"))
         .configure();
+
+    assumeWorkingMockito();
   }
 
   @Test
@@ -58,7 +65,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
         new ZkShardTerms(collection, "shard2", cluster.getZkClient())) {
       zkShardTerms.registerTerm("replica1");
       zkShardTerms.registerTerm("replica2");
-      zkShardTerms.ensureTermsIsHigher("replica1", Collections.singleton("replica2"));
+      zkShardTerms.ensureTermsIsHigher("replica1", Set.of("replica2"));
     }
 
     // When new collection is created, the old term nodes will be removed
@@ -87,7 +94,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
       zkShardTerms.registerTerm("replica2");
 
       // normal case when leader failed to send an update to replica
-      zkShardTerms.ensureTermsIsHigher("replica1", Collections.singleton("replica2"));
+      zkShardTerms.ensureTermsIsHigher("replica1", Set.of("replica2"));
       zkShardTerms.startRecovering("replica2");
       assertEquals(zkShardTerms.getTerm("replica2"), 1);
       assertEquals(zkShardTerms.getTerm("replica2_recovering"), 0);
@@ -97,7 +104,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
       assertEquals(zkShardTerms.getTerm("replica2"), 1);
       assertEquals(zkShardTerms.getTerm("replica2_recovering"), -1);
 
-      zkShardTerms.ensureTermsIsHigher("replica1", Collections.singleton("replica2"));
+      zkShardTerms.ensureTermsIsHigher("replica1", Set.of("replica2"));
       assertEquals(zkShardTerms.getTerm("replica1"), 2);
       assertEquals(zkShardTerms.getTerm("replica2"), 1);
       assertEquals(zkShardTerms.getTerm("replica2_recovering"), -1);
@@ -106,7 +113,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
       assertEquals(zkShardTerms.getTerm("replica2"), 2);
       assertEquals(zkShardTerms.getTerm("replica2_recovering"), 1);
 
-      zkShardTerms.ensureTermsIsHigher("replica1", Collections.singleton("replica2"));
+      zkShardTerms.ensureTermsIsHigher("replica1", Set.of("replica2"));
       assertEquals(zkShardTerms.getTerm("replica1"), 3);
       assertEquals(zkShardTerms.getTerm("replica2"), 2);
       assertEquals(zkShardTerms.getTerm("replica2_recovering"), 1);
@@ -118,9 +125,9 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
       zkShardTerms.startRecovering("replica2");
       zkShardTerms.doneRecovering("replica2");
 
-      zkShardTerms.ensureTermsIsHigher("replica1", Collections.singleton("replica2"));
+      zkShardTerms.ensureTermsIsHigher("replica1", Set.of("replica2"));
       zkShardTerms.startRecovering("replica2");
-      zkShardTerms.ensureTermsIsHigher("replica1", Collections.singleton("replica2"));
+      zkShardTerms.ensureTermsIsHigher("replica1", Set.of("replica2"));
       zkShardTerms.startRecovering("replica2");
       assertEquals(zkShardTerms.getTerm("replica1"), 5);
       assertEquals(zkShardTerms.getTerm("replica2"), 5);
@@ -140,7 +147,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
       zkShardTerms.registerTerm("replica2_rem");
 
       // normal case when leader failed to send an update to replica
-      zkShardTerms.ensureTermsIsHigher("replica1_rem", Collections.singleton("replica2_rem"));
+      zkShardTerms.ensureTermsIsHigher("replica1_rem", Set.of("replica2_rem"));
       zkShardTerms.startRecovering("replica2_rem");
       assertEquals(zkShardTerms.getTerm("replica2_rem"), 1);
       assertEquals(zkShardTerms.getTerm("replica2_rem_recovering"), 0);
@@ -167,7 +174,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
       assertEquals(0L, zkShardTerms.getTerm("rep2"));
     }
     waitFor(2, () -> rep1Terms.getTerms().size());
-    rep1Terms.ensureTermsIsHigher("rep1", Collections.singleton("rep2"));
+    rep1Terms.ensureTermsIsHigher("rep1", Set.of("rep2"));
     assertEquals(1L, rep1Terms.getTerm("rep1"));
     assertEquals(0L, rep1Terms.getTerm("rep2"));
 
@@ -265,7 +272,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
     replicaTerms.addListener(watcher);
     replicaTerms.registerTerm("replica");
     waitFor(1, count::get);
-    leaderTerms.ensureTermsIsHigher("leader", Collections.singleton("replica"));
+    leaderTerms.ensureTermsIsHigher("leader", Set.of("replica"));
     waitFor(2, count::get);
     replicaTerms.setTermEqualsToLeader("replica");
     waitFor(3, count::get);
@@ -280,7 +287,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
     ZkShardTerms terms = new ZkShardTerms(collection, "shard1", cluster.getZkClient());
     terms.registerTerm("leader");
     terms.registerTerm("replica");
-    terms.ensureTermsIsHigher("leader", Collections.singleton("replica"));
+    terms.ensureTermsIsHigher("leader", Set.of("replica"));
     assertEquals(1L, terms.getTerm("leader"));
     terms.setTermToZero("leader");
     assertEquals(0L, terms.getTerm("leader"));
@@ -294,7 +301,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
     leaderTerms.registerTerm("leader");
     replicaTerms.registerTerm("replica");
 
-    leaderTerms.ensureTermsIsHigher("leader", Collections.singleton("replica"));
+    leaderTerms.ensureTermsIsHigher("leader", Set.of("replica"));
     waitFor(false, () -> replicaTerms.canBecomeLeader("replica"));
     waitFor(true, () -> leaderTerms.skipSendingUpdatesTo("replica"));
 
@@ -317,7 +324,7 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
     leaderTerms.registerTerm("leader");
     replicaTerms.registerTerm("replica");
 
-    leaderTerms.ensureTermsIsHigher("leader", Collections.singleton("replica"));
+    leaderTerms.ensureTermsIsHigher("leader", Set.of("replica"));
     waitFor(false, () -> replicaTerms.canBecomeLeader("replica"));
     waitFor(true, () -> leaderTerms.skipSendingUpdatesTo("replica"));
 
@@ -327,6 +334,47 @@ public class ZkShardTermsTest extends SolrCloudTestCase {
 
     leaderTerms.close();
     replicaTerms.close();
+  }
+
+  public void testSetHighestTerms() throws Exception {
+    String collection = "setHighestTerms";
+    DocCollection readOnlyCollection = mock(DocCollection.class);
+    DocCollection nonReadOnlyCollection = mock(DocCollection.class);
+    when(readOnlyCollection.isReadOnly()).thenReturn(true);
+    when(nonReadOnlyCollection.isReadOnly()).thenReturn(false);
+
+    ZkShardTerms leaderTerms = new ZkShardTerms(collection, "shard1", cluster.getZkClient());
+    ZkShardTerms replica1Terms = new ZkShardTerms(collection, "shard1", cluster.getZkClient());
+    ZkShardTerms replica2Terms = new ZkShardTerms(collection, "shard1", cluster.getZkClient());
+    ZkShardTerms replica3Terms = new ZkShardTerms(collection, "shard1", cluster.getZkClient());
+    leaderTerms.registerTerm("leader");
+    replica1Terms.registerTerm("replica1");
+    replica2Terms.registerTerm("replica2");
+    replica3Terms.registerTerm("replica3");
+
+    expectThrows(
+        SolrServerException.class,
+        () -> leaderTerms.ensureHighestTerms(nonReadOnlyCollection, Set.of("leader", "replica1")));
+
+    leaderTerms.ensureHighestTerms(readOnlyCollection, Set.of("leader", "replica1"));
+    waitFor(true, () -> leaderTerms.canBecomeLeader("leader"));
+    waitFor(true, () -> replica1Terms.canBecomeLeader("replica1"));
+    waitFor(false, () -> replica2Terms.canBecomeLeader("replica2"));
+    waitFor(false, () -> replica3Terms.canBecomeLeader("replica3"));
+    waitFor(false, () -> leaderTerms.skipSendingUpdatesTo("replica1"));
+    waitFor(true, () -> leaderTerms.skipSendingUpdatesTo("replica2"));
+    waitFor(true, () -> leaderTerms.skipSendingUpdatesTo("replica3"));
+
+    leaderTerms.ensureHighestTerms(readOnlyCollection, Set.of("replica2", "replica3"));
+    waitFor(false, () -> leaderTerms.canBecomeLeader("leader"));
+    waitFor(false, () -> replica1Terms.canBecomeLeader("replica1"));
+    waitFor(true, () -> replica2Terms.canBecomeLeader("replica2"));
+    waitFor(true, () -> replica3Terms.canBecomeLeader("replica3"));
+
+    leaderTerms.close();
+    replica1Terms.close();
+    replica2Terms.close();
+    replica3Terms.close();
   }
 
   private <T> void waitFor(T expected, Supplier<T> supplier) throws InterruptedException {
