@@ -22,9 +22,9 @@ import static org.apache.solr.metrics.SolrMetricProducer.NAME_ATTR;
 
 import io.opentelemetry.api.common.Attributes;
 import io.prometheus.metrics.model.snapshots.Labels;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.lucene.tests.util.TestUtil;
@@ -99,13 +99,14 @@ public class TestThinCache extends SolrTestCaseJ4 {
   String registry = TestUtil.randomSimpleString(random(), 2, 10);
 
   @Test
-  public void testSimple() {
+  public void testSimple() throws IOException {
     Object cacheScope = new Object();
     ThinCache.NodeLevelCache<Object, Integer, String> backing = new ThinCache.NodeLevelCache<>();
     ThinCache<Object, Integer, String> lfuCache = new ThinCache<>();
     String lfuCacheName = "lfu_cache";
     lfuCache.setBacking(cacheScope, backing);
-    SolrMetricsContext solrMetricsContext = new SolrMetricsContext(metricManager, registry);
+    var solrMetricsContext = new SolrMetricsContext(metricManager, registry);
+    solrMetricsContext.registerCloseable(lfuCache);
     lfuCache.initializeMetrics(
         solrMetricsContext,
         Attributes.of(
@@ -114,6 +115,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
 
     Object cacheScope2 = new Object();
     ThinCache<Object, Integer, String> newLFUCache = new ThinCache<>();
+    solrMetricsContext.registerCloseable(newLFUCache);
     String newLfuCacheName = "new_lfu_cache";
     newLFUCache.setBacking(cacheScope2, backing);
     newLFUCache.initializeMetrics(
@@ -128,8 +130,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
 
     NoOpRegenerator regenerator = new NoOpRegenerator();
     backing.init(params, null, null);
-    Object initObj =
-        lfuCache.init(Collections.singletonMap("autowarmCount", "25"), null, regenerator);
+    Object initObj = lfuCache.init(Map.of("autowarmCount", "25"), null, regenerator);
     lfuCache.setState(SolrCache.State.LIVE);
     for (int i = 0; i < 101; i++) {
       lfuCache.put(i + 1, Integer.toString(i + 1));
@@ -148,7 +149,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
     assertNull(lfuCache.get(1)); // first item put in should be the first out
 
     // Test autowarming
-    newLFUCache.init(Collections.singletonMap("autowarmCount", "25"), initObj, regenerator);
+    newLFUCache.init(Map.of("autowarmCount", "25"), initObj, regenerator);
     newLFUCache.warm(null, lfuCache);
     newLFUCache.setState(SolrCache.State.LIVE);
 
@@ -165,6 +166,8 @@ public class TestThinCache extends SolrTestCaseJ4 {
     assertEquals(4L, newhits);
     assertEquals(102L, newinserts);
     assertEquals(0L, evictions);
+
+    solrMetricsContext.close();
   }
 
   @Test
