@@ -32,6 +32,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
@@ -64,8 +65,8 @@ import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.handler.loader.XMLLoader;
-import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
+import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.util.RandomNoReverseMergePolicyFactory;
 import org.apache.solr.util.RefCounted;
@@ -615,7 +616,7 @@ public class AddBlockUpdateTest extends SolrTestCaseJ4 {
                         "child_s",
                         "b",
                         "grandChild",
-                        Collections.singleton(sdoc("id", "7", "child_s", "d"))),
+                        Set.of(sdoc("id", "7", "child_s", "d"))),
                     sdoc("id", "6", "child_s", "c")))
             .toString());
   }
@@ -977,7 +978,7 @@ public class AddBlockUpdateTest extends SolrTestCaseJ4 {
   }
 
   private void indexSolrInputDocumentsDirectly(SolrInputDocument... docs) throws IOException {
-    SolrQueryRequest coreReq = new LocalSolrQueryRequest(h.getCore(), new ModifiableSolrParams());
+    SolrQueryRequest coreReq = new SolrQueryRequestBase(h.getCore(), new ModifiableSolrParams());
     AddUpdateCommand updateCmd = new AddUpdateCommand(coreReq);
     for (SolrInputDocument doc : docs) {
       updateCmd.solrDoc = doc;
