@@ -16,6 +16,7 @@
  */
 package org.apache.solr.cloud;
 
+import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.apache.solr.common.cloud.ZkStateReader.HTTPS;
 import static org.apache.solr.common.cloud.ZkStateReader.URL_SCHEME;
@@ -57,8 +58,9 @@ import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrRequest.METHOD;
 import org.apache.solr.client.solrj.SolrRequest.SolrRequestType;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.HttpSolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
+import org.apache.solr.client.solrj.impl.HttpSolrClient;
+import org.apache.solr.client.solrj.jetty.HttpJettySolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CoreAdminRequest;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
@@ -90,6 +92,7 @@ import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.NamedList;
+import org.apache.solr.common.util.RetryUtil;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.TimeSource;
@@ -160,7 +163,8 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
   protected volatile CloudSolrClient controlClientCloud; // cloud version of the control client
   protected volatile CloudSolrClient cloudClient;
-  protected final List<SolrClient> coreClients = Collections.synchronizedList(new ArrayList<>());
+  protected final List<HttpSolrClient> coreClients =
+      Collections.synchronizedList(new ArrayList<>());
 
   protected final List<CloudJettyRunner> cloudJettys =
       Collections.synchronizedList(new ArrayList<>());
@@ -209,7 +213,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
   }
 
   public static class CloudSolrServerClient {
-    SolrClient solrClient;
+    HttpSolrClient solrClient;
     String nodeName;
     int port;
 
@@ -295,7 +299,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
               .getZkClient()
               .create(
                   ZkStateReader.CLUSTER_PROPS,
-                  Utils.toJSON(Collections.singletonMap(URL_SCHEME, HTTPS)),
+                  Utils.toJSON(Map.of(URL_SCHEME, HTTPS)),
                   CreateMode.PERSISTENT);
         } catch (KeeperException.NodeExistsException e) {
           ZkNodeProps props =
@@ -365,7 +369,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
   }
 
   protected CloudSolrClient createCloudClient(String defaultCollection) {
-    return getCloudSolrClient(
+    return createNewCloudSolrClient(
         zkServer.getZkAddress(), defaultCollection, random().nextBoolean(), 30000, 120000);
   }
 
@@ -378,17 +382,22 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
             controlJettyDir, useJettyDataDir ? getDataDir(testDir + "/control/data") : null);
     controlJetty.start();
     try (CloudSolrClient client = createCloudClient("control_collection")) {
-      assertEquals(
-          0,
-          CollectionAdminRequest.createCollection("control_collection", "conf1", 1, 1)
-              .setCreateNodeSet(controlJetty.getNodeName())
-              .process(client)
-              .getStatus());
+      RetryUtil.retryOnException(
+          SolrException.class,
+          30000,
+          1000,
+          () ->
+              assertEquals(
+                  0,
+                  CollectionAdminRequest.createCollection("control_collection", "conf1", 1, 1)
+                      .setCreateNodeSet(controlJetty.getNodeName())
+                      .process(client)
+                      .getStatus()));
       waitForActiveReplicaCount(client, "control_collection", 1);
     }
 
     controlClient =
-        new HttpSolrClient.Builder(controlJetty.getBaseUrl().toString())
+        HttpSolrClient.builder(controlJetty.getBaseUrl().toString())
             .withDefaultCollection("control_collection")
             .build();
     if (sliceCount <= 0) {
@@ -442,7 +451,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
   protected List<JettySolrRunner> createJettys(int numJettys) throws Exception {
     List<JettySolrRunner> jettys = Collections.synchronizedList(new ArrayList<>());
-    List<SolrClient> clients = Collections.synchronizedList(new ArrayList<>());
+    List<HttpSolrClient> clients = Collections.synchronizedList(new ArrayList<>());
     List<CollectionAdminRequest<CollectionAdminResponse>> createReplicaRequests =
         Collections.synchronizedList(new ArrayList<>());
     List<CollectionAdminRequest<CollectionAdminResponse>> createPullReplicaRequests =
@@ -526,7 +535,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
                           .setType(Replica.Type.TLOG));
 
                   coreClients.add(createNewSolrClient(coreName, j.getLocalPort()));
-                  SolrClient client = createNewSolrClient(j.getLocalPort());
+                  var client = createNewSolrClient(j.getLocalPort());
                   clients.add(client);
 
                 } catch (Exception e) {
@@ -565,8 +574,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
                           .setNode(j.getNodeName())
                           .setType(Replica.Type.NRT));
                   coreClients.add(createNewSolrClient(coreName, j.getLocalPort()));
-                  SolrClient client = createNewSolrClient(j.getLocalPort());
-                  clients.add(client);
+                  clients.add(createNewSolrClient(j.getLocalPort()));
                 } catch (Exception e) {
                   log.error("error creating jetty", e);
                   throw new RuntimeException(e);
@@ -601,8 +609,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
                         .setNode(j.getNodeName())
                         .setType(Replica.Type.PULL));
                 coreClients.add(createNewSolrClient(coreName, j.getLocalPort()));
-                SolrClient client = createNewSolrClient(j.getLocalPort());
-                clients.add(client);
+                clients.add(createNewSolrClient(j.getLocalPort()));
               } catch (Exception e) {
                 log.error("error creating jetty", e);
                 throw new RuntimeException(e);
@@ -932,13 +939,13 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
     return relativizedCurDir.resolve(solrHomeRelativeToRoot).toAbsolutePath();
   }
 
-  protected void updateMappingsFromZk(List<JettySolrRunner> jettys, List<SolrClient> clients)
+  protected void updateMappingsFromZk(List<JettySolrRunner> jettys, List<HttpSolrClient> clients)
       throws Exception {
     updateMappingsFromZk(jettys, clients, false);
   }
 
   protected void updateMappingsFromZk(
-      List<JettySolrRunner> jettys, List<SolrClient> clients, boolean allowOverSharding)
+      List<JettySolrRunner> jettys, List<HttpSolrClient> clients, boolean allowOverSharding)
       throws Exception {
     ZkStateReader zkStateReader = ZkStateReader.from(cloudClient);
     zkStateReader.forceUpdateCollection(DEFAULT_COLLECTION);
@@ -949,13 +956,13 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
     DocCollection coll = clusterState.getCollection(DEFAULT_COLLECTION);
 
     List<CloudSolrServerClient> theClients = new ArrayList<>();
-    for (SolrClient client : clients) {
+    for (var client : clients) {
       // find info for this client in zk
       nextClient:
       // we find out state by simply matching ports...
       for (Slice slice : coll.getSlices()) {
         for (Replica replica : slice.getReplicas()) {
-          int port = new URI(((HttpSolrClient) client).getBaseURL()).getPort();
+          int port = new URI(client.getBaseURL()).getPort();
 
           if (replica.getBaseUrl().contains(":" + port)) {
             CloudSolrServerClient csc = new CloudSolrServerClient();
@@ -2037,8 +2044,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
       for (Map.Entry<String, Slice> slice : slices.entrySet()) {
         Map<String, Replica> theShards = slice.getValue().getReplicasMap();
         for (Map.Entry<String, Replica> shard : theShards.entrySet()) {
-          String shardName =
-              new URI(((HttpSolrClient) client.solrClient).getBaseURL()).getPort() + "_solr_";
+          String shardName = new URI(client.solrClient.getBaseURL()).getPort() + "_solr_";
           if (verbose && shard.getKey().endsWith(shardName)) {
             System.err.println("shard:" + slice.getKey());
             System.err.println(shard.getValue());
@@ -2261,12 +2267,14 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
     customThreadPool.execute(() -> IOUtils.closeQuietly(cloudClient));
 
-    ExecutorUtil.shutdownAndAwaitTermination(customThreadPool);
+    try {
+      ExecutorUtil.shutdownAndAwaitTermination(customThreadPool);
+    } finally {
+      coreClients.clear();
+      solrClientByCollection.clear();
 
-    coreClients.clear();
-    solrClientByCollection.clear();
-
-    super.destroyServers();
+      super.destroyServers();
+    }
   }
 
   @Override
@@ -2351,7 +2359,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
     CollectionAdminResponse res = new CollectionAdminResponse();
     if (client == null) {
       final String baseUrl = getBaseUrl(jettys.get(clientIndex));
-      try (SolrClient adminClient = createNewSolrClient("", baseUrl)) {
+      try (SolrClient adminClient = createNewSolrClient(baseUrl, null)) {
         res.setResponse(adminClient.request(request));
       }
     } else {
@@ -2433,44 +2441,42 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
    * not wish to have any randomized behavior should use the {@link
    * org.apache.solr.client.solrj.impl.CloudSolrClient.Builder} class directly
    */
-  public static CloudSolrClient getCloudSolrClient(
+  public static CloudSolrClient createNewCloudSolrClient(
       String zkHost,
       String defaultCollection,
       boolean shardLeadersOnly,
       int connectionTimeoutMillis,
-      int socketTimeoutMillis) {
-    RandomizingCloudSolrClientBuilder builder =
-        new RandomizingCloudSolrClientBuilder(Collections.singletonList(zkHost), Optional.empty());
+      int idleTimeoutMillis) {
+    var builder = new RandomizingCloudSolrClientBuilder(List.of(zkHost), Optional.empty());
+    builder.withDefaultCollection(defaultCollection);
     if (shardLeadersOnly) {
       builder.sendUpdatesOnlyToShardLeaders();
     } else {
-      builder.sendUpdatesToAllReplicasInShard();
+      builder.sendUpdatesToAnyReplica();
     }
-    if (defaultCollection != null) {
-      builder.withDefaultCollection(defaultCollection);
-    }
-    return builder
-        .withConnectionTimeout(connectionTimeoutMillis)
-        .withSocketTimeout(socketTimeoutMillis)
-        .build();
+    builder.withHttpClientBuilder(
+        new HttpJettySolrClient.Builder()
+            .withConnectionTimeout(connectionTimeoutMillis, MILLISECONDS)
+            .withIdleTimeout(idleTimeoutMillis, MILLISECONDS));
+    return builder.build();
   }
 
   @Override
-  protected SolrClient createNewSolrClient(int port) {
+  protected HttpSolrClient createNewSolrClient(int port) {
     return createNewSolrClient(DEFAULT_COLLECTION, port);
   }
 
-  protected SolrClient createNewSolrClient(String coreName, int port) {
+  protected HttpSolrClient createNewSolrClient(String coreName, int port) {
     String baseUrl = buildUrl(port);
-    return new HttpSolrClient.Builder(baseUrl)
+    return HttpSolrClient.builder(baseUrl)
         .withDefaultCollection(coreName)
         .withConnectionTimeout(DEFAULT_CONNECTION_TIMEOUT, TimeUnit.MILLISECONDS)
-        .withSocketTimeout(60000, TimeUnit.MILLISECONDS)
+        .withIdleTimeout(60000, TimeUnit.MILLISECONDS)
         .build();
   }
 
-  protected SolrClient createNewSolrClient(String collection, String baseUrl) {
-    return getHttpSolrClient(baseUrl, collection);
+  protected SolrClient createNewSolrClient(String baseUrl, String collection) {
+    return new HttpJettySolrClient.Builder(baseUrl).withDefaultCollection(collection).build();
   }
 
   protected String getBaseUrl(JettySolrRunner jetty) {
@@ -2544,7 +2550,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
     synchronized (this) {
       if (commonCloudSolrClient == null) {
         commonCloudSolrClient =
-            getCloudSolrClient(
+            createNewCloudSolrClient(
                 zkServer.getZkAddress(), DEFAULT_COLLECTION, random().nextBoolean(), 5000, 120000);
         commonCloudSolrClient.connect();
         if (log.isInfoEnabled()) {
@@ -2563,7 +2569,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
         collectionName,
         k -> {
           CloudSolrClient solrClient =
-              getCloudSolrClient(
+              createNewCloudSolrClient(
                   zkServer.getZkAddress(), collectionName, random().nextBoolean(), 5000, 120000);
 
           solrClient.connect();
@@ -2992,7 +2998,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
   protected long getIndexVersion(Replica replica) throws IOException {
     try (SolrClient client =
-        new HttpSolrClient.Builder(replica.getBaseUrl())
+        HttpSolrClient.builder(replica.getBaseUrl())
             .withDefaultCollection(replica.getCoreName())
             .build()) {
       ModifiableSolrParams params = new ModifiableSolrParams();
@@ -3042,7 +3048,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
   protected void logReplicationDetails(Replica replica, StringBuilder builder) throws IOException {
     try (SolrClient client =
-        new HttpSolrClient.Builder(replica.getBaseUrl())
+        HttpSolrClient.builder(replica.getBaseUrl())
             .withDefaultCollection(replica.getCoreName())
             .build()) {
       ModifiableSolrParams params = new ModifiableSolrParams();
@@ -3107,17 +3113,13 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
   protected void setupRestTestHarnesses() {
     for (final JettySolrRunner jetty : jettys) {
-      RestTestHarness harness =
-          new RestTestHarness(
-              () -> jetty.getBaseUrl().toString() + "/" + DEFAULT_TEST_COLLECTION_NAME);
-      restTestHarnesses.add(harness);
+      restTestHarnesses.add(jetty.getRestClient(DEFAULT_TEST_COLLECTION_NAME));
     }
   }
 
   protected void closeRestTestHarnesses() throws IOException {
-    for (RestTestHarness h : restTestHarnesses) {
-      h.close();
-    }
+    // note: prior to Solr 10.1, there was actual closing to do.
+    restTestHarnesses.clear();
   }
 
   protected RestTestHarness randomRestTestHarness() {
